update git repository

--- a/packages/intl/package.json
+++ b/packages/intl/package.json
@@ -20,7 +20,8 @@
     "access": "public"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "https://github.com/orca-team/intl"
   },
   "scripts": {
     "build": "father build",
